# 3d-object-tracking

./: .gitignore  CMakeLists.txt  README.md  Statistics_Visualizations.ipynb  Statistics_and_Graphs.ipynb  build_and_run.sh  do_build.sh  do_run.sh
data/: AKAZE_AKAZE_BINARY_BF_KNN.txt  AKAZE_AKAZE_BINARY_BF_NN.txt  AKAZE_AKAZE_BINARY_FLANN_KNN.txt  AKAZE_AKAZE_BINARY_FLANN_NN.txt  AKAZE_AKAZE_DES_BINARY_MAT_BF_SEL_NN_statistics.txt  AKAZE_AKAZE_DES_BINARY_MAT_BF_SEL_NN_time_to_collision.txt  AKAZE_AKAZE_DES_BINARY_MAT_FLANN_SEL_NN_time_to_collision.txt  AKAZE_AKAZE_HOG_BF_KNN.txt  AKAZE_AKAZE_HOG_BF_NN.txt  AKAZE_AKAZE_HOG_FLANN_KNN.txt  AKAZE_AKAZE_HOG_FLANN_NN.txt  AKAZE_BRIEF_BINARY_BF_KNN.txt  AKAZE_BRIEF_BINARY_BF_NN.txt  AKAZE_BRIEF_BINARY_FLANN_KNN.txt  AKAZE_BRIEF_BINARY_FLANN_NN.txt  AKAZE_BRIEF_DES_BINARY_MAT_BF_SEL_KNN_time_to_collision.txt  AKAZE_BRIEF_DES_BINARY_MAT_BF_SEL_NN_statistics.txt  AKAZE_BRIEF_DES_BINARY_MAT_BF_SEL_NN_time_to_collision.txt  AKAZE_BRIEF_DES_BINARY_MAT_FLANN_SEL_KNN_time_to_collision.txt  AKAZE_BRIEF_HOG_BF_KNN.txt  AKAZE_BRIEF_HOG_BF_NN.txt  AKAZE_BRIEF_HOG_FLANN_KNN.txt  AKAZE_BRIEF_HOG_FLANN_NN.txt  AKAZE_BRISK_BINARY_BF_KNN.txt  AKAZE_BRISK_BINARY_BF_NN.txt  AKAZE_BRISK_BINARY_FLANN_KNN.txt  AKAZE_BRISK_BINARY_FLANN_NN.txt  AKAZE_BRISK_DES_BINARY_MAT_BF_SEL_KNN_time_to_collision.txt  AKAZE_BRISK_DES_BINARY_MAT_BF_SEL_NN_statistics.txt  AKAZE_BRISK_DES_BINARY_MAT_BF_SEL_NN_time_to_collision.txt  AKAZE_BRISK_DES_BINARY_MAT_FLANN_SEL_KNN_time_to_collision.txt  AKAZE_BRISK_DES_BINARY_MAT_FLANN_SEL_NN_time_to_collision.txt  (+313 more)
(+7 files in other folders)
